@@ -3,6 +3,7 @@
 1. Add support for LMS 9.0 user defined roles.
 2. Allow to save 'Random Mix' configs for later use, and list these when open
    'Random Mix'.
+3. Remove 'Stop' button from 'Random Mix' dialog, as can be stopped elsewhere.
 
 5.1.1
 -----
